fixing spacing

--- a/resources/textdle/style.css
+++ b/resources/textdle/style.css
@@ -20,6 +20,7 @@ input {
     caret-color: transparent;
     font-family: font;
     text-transform: lowercase;
+    margin-right: 10px;
 }
 
 p {
